[package]
name = "iris"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Placeholder"
homepage = "https://github.com/iderie/iris/tree/main"
documentation = "https://docs.rs/iris"
repository = "https://github.com/iderie/iris/tree/main"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
